Corrected EN -> PT redirection

--- a/english/index.html
+++ b/english/index.html
@@ -47,10 +47,10 @@
         <p> Other places: <em>kaslusimoes</em></p>
 
         <br/>
-        <p><a class="language" href="english">English</a></p>
+        <p><a class="language" href="..">Português</a></p>
     </div>
 
-    <div id="footer" sytle="left: 0px">
+    <div id="footer">
         <p>Last updated on July 19th 2015</p>
     </div>
 </body>
