Created more pages, corrected some things, changed CSS ('intext' links)

--- a/about.html
+++ b/about.html
@@ -19,16 +19,14 @@
     </div>
 
     <div class="left">
-        <h1>Lucas Silva Simões</h1>
+        <h1>Sobre Mim</h1>
 
-        <p>"Physicists tend to see themselves as the lords of the academic jungle, loftily regarding their own methods as above
-        the ken of anybody else and jealously guarding their own terrain. But their alter egos are closer to scavengers,
-        happy to borrow ideas and techniques from anywhere if they seem like they might be useful, and delighted to stomp
-        all over someone else's problem. As irritating as this attitude can be to everybody else, the arrival of the physicists
-        into a previously non-physics area of research often presages a period of great discovery and excitement. </p>
-        <p> " (...) no one descends with such fury and in so great a number as a
-        pack of hungry physicists, adrenalized by the scent of a new problem" </p>
-        <p> Duncan J. Watts <em>Six degrees: The science of a connected age</em> </p>
+        <p>Sou um aluno de graduação do <a href="http://cecm.usp.br"> Curso de Ciências Moleculares</a>, cursando o meu
+        7o semestre, e estudando coisas beeem bizarras sob a orientação de <a href=http://lattes.cnpq.br/4522581444077162>
+        Nestor Caticha</a></p>
+
+        <p>Como hobbie, gosto bastante de aprender detalhes irrelevantes sobre como os computadores funcionam, em especial
+        a maneira como as distribuições Linux são organizadas e o funcionamento de suas ferramentas</p>
     </div>
 
     <div class="right">
@@ -47,7 +45,7 @@
         <p> Em outros cantos: <em>kaslusimoes</em></p>
 
         <br/>
-        <p><a class="language" href="english/index.html">English</a></p>
+        <p><a class="language" href="english/about.html">English</a></p>
     </div>
 
     <div id="footer" sytle="left: 0px">
