--- a/english/ccm.html
+++ b/english/ccm.html
@@ -19,16 +19,11 @@
     </div>
 
     <div class="left">
-        <h1>Lucas Silva Simões</h1>
+        <h1>Molecular Sciences Course (CCM)</h1>
 
-        <p>"Physicists tend to see themselves as the lords of the academic jungle, loftily regarding their own methods as above
-        the ken of anybody else and jealously guarding their own terrain. But their alter egos are closer to scavengers,
-        happy to borrow ideas and techniques from anywhere if they seem like they might be useful, and delighted to stomp
-        all over someone else's problem. As irritating as this attitude can be to everybody else, the arrival of the physicists
-        into a previously non-physics area of research often presages a period of great discovery and excitement. </p>
-        <p> " (...) no one descends with such fury and in so great a number as a
-        pack of hungry physicists, adrenalized by the scent of a new problem" </p>
-        <p> Duncan J. Watts <em>Six degrees: The science of a connected age</em> </p>
+        <p>Under Construction</p>
+
+        <p>There will be on this page some brief description of Molecular Sciences Course (possibly with some opinions of mine)</p>
     </div>
 
     <div class="right">
@@ -47,7 +42,7 @@
         <p> Other places: <em>kaslusimoes</em></p>
 
         <br/>
-        <p><a class="language" href="../index.html">Português</a></p>
+        <p><a class="language" href="../ccm.html">Português</a></p>
     </div>
 
     <div id="footer">
