--- a/research.html
+++ b/research.html
@@ -19,16 +19,11 @@
     </div>
 
     <div class="left">
-        <h1>Lucas Silva Simões</h1>
+        <h1>Pesquisa</h1>
 
-        <p>"Physicists tend to see themselves as the lords of the academic jungle, loftily regarding their own methods as above
-        the ken of anybody else and jealously guarding their own terrain. But their alter egos are closer to scavengers,
-        happy to borrow ideas and techniques from anywhere if they seem like they might be useful, and delighted to stomp
-        all over someone else's problem. As irritating as this attitude can be to everybody else, the arrival of the physicists
-        into a previously non-physics area of research often presages a period of great discovery and excitement. </p>
-        <p> " (...) no one descends with such fury and in so great a number as a
-        pack of hungry physicists, adrenalized by the scent of a new problem" </p>
-        <p> Duncan J. Watts <em>Six degrees: The science of a connected age</em> </p>
+        <p>Em construção</p>
+
+        <p>Aqui haverá uma breve descrição da linha de pesquisa que desenvolvo sob a orientação do Nestor Caticha</p>
     </div>
 
     <div class="right">
@@ -47,7 +42,7 @@
         <p> Em outros cantos: <em>kaslusimoes</em></p>
 
         <br/>
-        <p><a class="language" href="english/index.html">English</a></p>
+        <p><a class="language" href="english/research.html">English</a></p>
     </div>
 
     <div id="footer" sytle="left: 0px">
