Changed left and right to ids; added Pesquisa tab; changed date

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
         </ul>
     </div>
 
-    <div class="left">
+    <div id="left">
         <h1>Sobre Mim</h1>
 
         <p>Sou um mestrando em Física na Universidade de São Paulo, recém-formado do <a href="http://cecm.usp.br"> Curso de Ciências Moleculares</a>, e estudando modelos de agentes bayesianos a orientação de <a href=http://lattes.cnpq.br/4522581444077162>
@@ -28,11 +28,11 @@
         a maneira como as distribuições Linux são organizadas e o funcionamento de suas ferramentas</p>
     </div>
 
-    <div class="right">
+    <div id="right">
         <h3> Sítios Relevantes </h3>
 
         <p><a href="http://www5.usp.br">Universidade de São Paulo</a></p>
-        <p><a href="http://portal.if.usp.br/ifusp/"> Instituto de Fìsica da USP</a></p>
+        <p><a href="http://portal.if.usp.br/ifusp/"> Instituto de Física da USP</a></p>
         <p><a href="http://cecm.usp.br"> Curso de Ciências Moleculares </a></p>
         <p><a href="http://fge.if.usp.br/~cnaips/"> CNAIPS </a></p>
 
@@ -50,7 +50,7 @@
     </div>
 
     <div id="footer" sytle="left: 0px">
-        <p>Última atualização em 29 de Julho de 2016</p>
+        <p>Última atualização em 25 de Maio de 2017</p>
     </div>
 </body>
 </html>
