--- a/english/about.html
+++ b/english/about.html
@@ -18,7 +18,7 @@
         </ul>
     </div>
 
-    <div class="left">
+    <div id="left">
         <h1>About Me</h1>
 
         <p>I'm a MSc. student at Universidade de São Paulo, freshly graduated on the <a href="http://cecm.usp.br"> Molecular Sciences Bachelor</a>, studying bayesian agents models under <a href=http://lattes.cnpq.br/4522581444077162>
@@ -28,7 +28,7 @@
         the way how LInux distributions are assembled and the functioning of its tools</p>
     </div>
 
-    <div class="right">
+    <div id="right">
         <h3> Relevant Sites </h3>
 
         <p><a href="http://www5.usp.br/english/?lang=en">University of São Paulo</a></p>
@@ -50,7 +50,7 @@
     </div>
 
     <div id="footer">
-        <p>Last updated on July 29th 2016</p>
+        <p>Last updated on May 25th 2017</p>
     </div>
 </body>
 </html>
