--- a/english/ccm.html
+++ b/english/ccm.html
@@ -18,7 +18,7 @@
         </ul>
     </div>
 
-    <div class="left">
+    <div id="left">
         <h1>Molecular Sciences Course (CCM)</h1>
 
         <p>Under Construction</p>
@@ -26,7 +26,7 @@
         <p>There will be on this page some brief description of Molecular Sciences Course (possibly with some opinions of mine)</p>
     </div>
 
-    <div class="right">
+    <div id="right">
         <h3> Relevant Sites </h3>
 
         <p><a href="http://www5.usp.br/english/?lang=en">University of São Paulo</a></p>
@@ -48,7 +48,7 @@
     </div>
 
     <div id="footer">
-        <p>Last updated on July 29th 2016</p>
+        <p>Last updated on May 25th 2017</p>
     </div>
 </body>
 </html>
