--- a/english/research.html
+++ b/english/research.html
@@ -18,17 +18,25 @@
         </ul>
     </div>
 
-    <div class="left">
+    <div id="left">
         <h1>Research</h1>
 
-        <p>Under Construction</p>
+        <p>I am currently studying to get my master's in physics at University of São Paulo under advisance of <a href="http://portal.if.usp.br/ifusp/en/user/853"> Prof. Nestor Caticha </a> since August 2016.</p>
 
-        <p>There will be on this page some brief description of the research line I develop under Nestor Caticha's guidance</p>
+        <p>I study <em>models of bayesian agents to study collective phenomena in societies</em>. "Translating", we use <span class="softmark">Information Theory, Machine Learning and Statistical Mechanics</span> to model agents that, in a certain way, simulate human behavior, social interaction and moral reasoning.</p>
 
-        <p>In the meanwhile you can send me an email!</p>
+        <p>The study consists of two steps: the <em>agent</em> and the <em>society</em></p>
+
+        <ol>
+
+          <li> <span class="heavymark">Agent</span>: experimental results from <span class="softmark">Neuroscience</span> and from <span class="softmark">Moral Psychology</span> constrain and guide our agent modelling. From what we know about human (individual) behavior we develop "architectures" that capture some relevant characteristic. From this we study the consequences of the agent model, how it interacts with the information delivered to it, how ir reacts, learns and emits signals;</li>
+          <li> <span class="heavymark">Society</span>: fixing the behavior of an agent, we can construct models of <em>societies of agents</em>. The question now enters a macroscopic domain, that is, which kinds of <em>global (statistical) characteristics</em> we discover in a society model when it is built from specific types of agents? From that we can make predictions and compare with data we might have about past and/or modern real societies.</li>
+        </ol>
+
+        <p>If you want to know more about my research you can send me an <a href="mailto:lucas.silva.simoes@usp.br">email</a>!</p>
     </div>
 
-    <div class="right">
+    <div id="right">
         <h3> Relevant Sites </h3>
 
         <p><a href="http://www5.usp.br/english/?lang=en">University of São Paulo</a></p>
@@ -50,7 +58,7 @@
     </div>
 
     <div id="footer">
-        <p>Last updated on July 29th 2016</p>
+        <p>Last updated on May 25th 2017</p>
     </div>
 </body>
 </html>
