--- a/research.html
+++ b/research.html
@@ -18,21 +18,29 @@
         </ul>
     </div>
 
-    <div class="left">
+    <div id="left">
         <h1>Pesquisa</h1>
 
-        <p>Em construção</p>
+        <p>Sou estudante de Mestrado em Física sob orientação do <a href="http://portal.if.usp.br/ifusp/pt-br/user/853"> Prof. Nestor Caticha </a> desde Agosto de 2016.</p>
 
-        <p>Aqui haverá uma breve descrição da linha de pesquisa que desenvolvo sob a orientação do Nestor Caticha</p>
-        
-        <p>Enquanto isso não acontece você pode me mandar um email! </p>
+        <p>Estudo <em>modelos de agentes bayesianos para estudar comportamentos coletivos em sociedades</em>. Traduzindo, usamos <span class="softmark">Teoria da Informação, Aprendizado de Máquina e Mecânica Estatística</span> para modelar agentes que simulam de alguma forma o comportamento humano em suas interações sociais e raciocínio moral.</p>
+
+        <p>O estudo tem duas etapas: o <em>agente</em> e a <em>sociedade</em></p>
+
+        <ol>
+          <li> <span class="heavymark">Agente</span>: resultados experimentais de <span class="softmark">Neurociência</span> e de <span class="softmark">Psicologia Moral</span> restringem e orientam a nossa modelagem dos agentes. A partir do que sabemos sobre o comportamento humano (individual) desenvolvemos "arquiteturas" que capturem alguma característica relevante. A partir disso estudamos o desenrolar do modelo do nosso agente, como ele interage com as informações que lhe são entregues, como ele reage, aprende e emite outros sinais; </li>
+
+          <li> <span class="heavymark">Sociedade</span>: tendo fixado o comportamento de um agente, podemos construir modelos de <em>sociedades de agentes</em>. A pergunta aqui passa para um âmbito mais macroscópico, isto é, quais são as <em>características globais (estatísticas)</em> que enxergamos em um modelo de sociedade quando ela é constituida de agentes de um certo tipo? A partir de então podemos fazer previsões e comparar com os dados que tivermos de sociedades passadas e/ou modernas </li>
+        </ol>
+
+        <p>Se quiser saber mais sobre minha pesquisa fique à vontade para me mandar um <a href="mailto:lucas.silva.simoes@usp.br"> email</a>! </p>
     </div>
 
-    <div class="right">
+    <div id="right">
         <h3> Sítios Relevantes </h3>
 
         <p><a href="http://www5.usp.br">Universidade de São Paulo</a></p>
-        <p><a href="http://portal.if.usp.br/ifusp/"> Instituto de Fìsica da USP</a></p>
+        <p><a href="http://portal.if.usp.br/ifusp/"> Instituto de Física da USP</a></p>
         <p><a href="http://cecm.usp.br"> Curso de Ciências Moleculares </a></p>
         <p><a href="http://fge.if.usp.br/~cnaips/"> CNAIPS </a></p>
 
@@ -50,7 +58,7 @@
     </div>
 
     <div id="footer" sytle="left: 0px">
-        <p>Última atualização em 29 de Julho de 2016</p>
+        <p>Última atualização em 25 de Maio de 2017</p>
     </div>
 </body>
 </html>
