--- a/ccm.html
+++ b/ccm.html
@@ -18,7 +18,7 @@
         </ul>
     </div>
 
-    <div class="left">
+    <div id="left">
         <h1>Curso de Ciências Moleculares (CCM)</h1>
 
         <p>Em construção</p>
@@ -26,11 +26,11 @@
         <p>Aqui haverá uma breve descrição do curso de Ciências Moleculares (possivelmente com algumas opniões minhas sobre o mesmo)</p>
     </div>
 
-    <div class="right">
+    <div id="right">
         <h3> Sítios Relevantes </h3>
 
         <p><a href="http://www5.usp.br">Universidade de São Paulo</a></p>
-        <p><a href="http://portal.if.usp.br/ifusp/"> Instituto de Fìsica da USP</a></p>
+        <p><a href="http://portal.if.usp.br/ifusp/"> Instituto de Física da USP</a></p>
         <p><a href="http://cecm.usp.br"> Curso de Ciências Moleculares </a></p>
         <p><a href="http://fge.if.usp.br/~cnaips/"> CNAIPS </a></p>
 
@@ -48,7 +48,7 @@
     </div>
 
     <div id="footer" sytle="left: 0px">
-        <p>Última atualização em 29 de Julho de 2016</p>
+        <p>Última atualização em 25 de Maio de 2017</p>
     </div>
 </body>
 </html>
