--- a/english/index.html
+++ b/english/index.html
@@ -18,7 +18,7 @@
         </ul>
     </div>
 
-    <div class="left">
+    <div id="left">
         <h1>Lucas Silva Simões</h1>
 
         <p>"Physicists tend to see themselves as the lords of the academic jungle, loftily regarding their own methods as above
@@ -31,7 +31,7 @@
         <p> Duncan J. Watts <em>Six degrees: The science of a connected age</em> </p>
     </div>
 
-    <div class="right">
+    <div id="right">
         <h3> Relevant Sites </h3>
 
         <p><a href="http://www5.usp.br/english/?lang=en">University of São Paulo</a></p>
@@ -53,7 +53,7 @@
     </div>
 
     <div id="footer">
-        <p>Last updated on July 29th 2016</p>
+        <p>Last updated on May 25th 2017</p>
     </div>
 </body>
 </html>
