--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </ul>
     </div>
 
-    <div class="left">
+    <div id="left">
         <h1>Lucas Silva Simões</h1>
 
         <p>"Physicists tend to see themselves as the lords of the academic jungle, loftily regarding their own methods as above
@@ -31,11 +31,11 @@
         <p> Duncan J. Watts <em>Six degrees: The science of a connected age</em> </p>
     </div>
 
-    <div class="right">
+    <div id="right">
         <h3> Sítios Relevantes </h3>
 
         <p><a href="http://www5.usp.br">Universidade de São Paulo</a></p>
-        <p><a href="http://portal.if.usp.br/ifusp/"> Instituto de Fìsica da USP</a></p>
+        <p><a href="http://portal.if.usp.br/ifusp/"> Instituto de Física da USP</a></p>
         <p><a href="http://cecm.usp.br"> Curso de Ciências Moleculares </a></p>
         <p><a href="http://fge.if.usp.br/~cnaips/"> CNAIPS </a></p>
 
@@ -53,7 +53,7 @@
     </div>
 
     <div id="footer" sytle="left: 0px">
-        <p>Última atualização em 29 de Julho de 2016</p>
+        <p>Última atualização em 25 de Maio de 2017</p>
     </div>
 </body>
 </html>
