--- a/english/about.html
+++ b/english/about.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" >
-    <meta name="description" content="Lucas Silva Simões" >
+    <meta name="description" content="Lucas Silva Simões - MSc student in Physics at University of São Paulo - Research webpage" >
 
     <link type="text/css" rel="stylesheet" href="../academiclucas.css" />
 
-    <title> Lucas Silva Simões </title>
+    <title> Lucas Silva Simões - Research Interests</title>
 </head>
 <body>
     <div id="header">
