--- a/ccm.html
+++ b/ccm.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" >
-    <meta name="description" content="Lucas Silva Simões" >
+    <meta name="description" content="Lucas Silva Simões - Estudante de MSc em Física na Universidade de São Paulo - Sítio sobre Pesquisa" >
 
     <link type="text/css" rel="stylesheet" href="academiclucas.css" />
 
-    <title> Lucas Silva Simões </title>
+    <title> Lucas Silva Simões - Interesses de Pesquisa</title>
 </head>
 <body>
     <div id="header">
