--- a/english/about.html
+++ b/english/about.html
@@ -24,8 +24,8 @@
         <p>I'm a MSc. student at Universidade de São Paulo, freshly graduated on the <a href="http://cecm.usp.br"> Molecular Sciences Bachelor</a>, studying bayesian agents models under <a href=http://lattes.cnpq.br/4522581444077162>
         Nestor Caticha</a>'s guidance</p>
 
-        <p>As a hobbie, I really enjoy learning irrelevant details about how computers work, in particular
-        the way how LInux distributions are assembled and the functioning of its tools</p>
+        <p>As a hobbie, I really enjoy learning the intricate details of how computers work, in particular
+        the way how Linux distributions are assembled and the functioning of its tools</p>
     </div>
 
     <div id="right">
