--- a/english/research.html
+++ b/english/research.html
@@ -21,16 +21,16 @@
     <div id="left">
         <h1>Research</h1>
 
-        <p>I am currently studying to get my master's in physics at University of São Paulo under advisance of <a href="http://portal.if.usp.br/ifusp/en/user/853"> Prof. Nestor Caticha </a> since August 2016.</p>
+        <p>Since August 2016 I have been studying to get my Master's degree in Physics at University of São Paulo under advisance of <a href="http://portal.if.usp.br/ifusp/en/user/853"> Prof. Nestor Caticha </a>.</p>
 
-        <p>I study <em>models of bayesian agents to study collective phenomena in societies</em>. "Translating", we use <span class="softmark">Information Theory, Machine Learning and Statistical Mechanics</span> to model agents that, in a certain way, simulate human behavior, social interaction and moral reasoning.</p>
+        <p>My research deals with <em>models of bayesian agents to study collective phenomena in societies</em>. With a bit less jargon, we use <span class="softmark">Information Theory, Machine Learning and Statistical Mechanics</span> to model agents that, in a certain way, simulate human behavior, social interaction and moral reasoning.</p>
 
         <p>The study consists of two steps: the <em>agent</em> and the <em>society</em></p>
 
         <ol>
 
-          <li> <span class="heavymark">Agent</span>: experimental results from <span class="softmark">Neuroscience</span> and from <span class="softmark">Moral Psychology</span> constrain and guide our agent modelling. From what we know about human (individual) behavior we develop "architectures" that capture some relevant characteristic. From this we study the consequences of the agent model, how it interacts with the information delivered to it, how ir reacts, learns and emits signals;</li>
-          <li> <span class="heavymark">Society</span>: fixing the behavior of an agent, we can construct models of <em>societies of agents</em>. The question now enters a macroscopic domain, that is, which kinds of <em>global (statistical) characteristics</em> we discover in a society model when it is built from specific types of agents? From that we can make predictions and compare with data we might have about past and/or modern real societies.</li>
+          <li> <span class="heavymark">Agent</span>: experimental results from <span class="softmark">Neuroscience</span> and from <span class="softmark">Moral Psychology</span> constrain and guide our agent modelling. From what we know about human (individual) behavior we develop "architectures" that capture some relevant characteristic. From this we study the consequences of the agent model, how it interacts with the information delivered to it, how ir reacts, learns and emits "signals";</li>
+          <li> <span class="heavymark">Society</span>: fixing the behavior of an agent, we can construct models of <em>societies of agents</em>. The question now enters a macroscopic domain, that is, which kinds of <em>global (statistical) characteristics</em> we discover in a society model when it is built from specific types of agents? From that we can make predictions and compare with data on past/modern societies.</li>
         </ol>
 
         <p>If you want to know more about my research you can send me an <a href="mailto:lucas.silva.simoes@usp.br">email</a>!</p>
